--- a/test2.html
+++ b/test2.html
@@ -1,3 +1,3 @@
 <h1>test2</h1>
 <a href="test.html">go to test 1</a>
-<a href="https://theonlysake.github.io/">go to index</a>
+<a href="index.html">go to index</a>
