--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+<script src="bootstrap-5.3.2-dist/js/bootstrap.bundle.min.js"></script>
+<link rel="stylesheet" href="bootstrap-5.3.2-dist/css/bootstrap.min.css"/>
+
+<link rel="stylesheet" href="style-util.css"/>
+
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">Navbar</a>
@@ -36,6 +39,7 @@
     </div>
   </div>
 </nav>
+
 <h1>Hello!</h1>
 <a href="test.html">Go To Test!</a>
-<img src="Screenshot 2024-01-11 074727.png" alt="image" />
+<img src="v7c1kEZ.gif" alt="image" />
