--- a/index.html
+++ b/index.html
@@ -2,44 +2,13 @@
 <link rel="stylesheet" href="bootstrap-5.3.2-dist/css/bootstrap.min.css"/>
 
 <link rel="stylesheet" href="style-util.css"/>
+<script src="web-components/NavBar.js"></script>
 
-<nav class="navbar navbar-expand-lg bg-body-tertiary">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="#">Navbar</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Dropdown
-          </a>
-          <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">Action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
-            <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="#">Something else here</a></li>
-          </ul>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link disabled" aria-disabled="true">Disabled</a>
-        </li>
-      </ul>
-      <form class="d-flex" role="search">
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success" type="submit">Search</button>
-      </form>
-    </div>
-  </div>
-</nav>
+<nav-bar></nav-bar>
 
-<h1>Hello!</h1>
-<a href="test.html">Go To Test!</a>
-<img src="v7c1kEZ.gif" alt="image" />
+<div class="d-flex flex-column w-100 h-100 justify-content-center align-items-center">
+  <h1 class="Display-1 text-custom mb-4">I'm Making a Game!</h1>
+  <a id="check-out-my-game-button" class="d-flex flex-row justify-content-center align-items-center text-decoration-none" href="about-my-game.html">
+    <span class="text-custom h2 mb-0">Check It Out!</span>
+  </a>
+</div>
