attempting mobile fix

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <link rel="stylesheet" href="style-util.css"/>
 <script src="web-components/NavBar.js"></script>
+<meta name="viewport" content="width=device-width, initial-scale=1">
 
 <nav-bar></nav-bar>
 
