--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+
 <script src="bootstrap-5.3.2-dist/js/bootstrap.bundle.min.js"></script>
 <link rel="stylesheet" href="bootstrap-5.3.2-dist/css/bootstrap.min.css"/>
 
