--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <nav-bar></nav-bar>
 
 <div class="d-flex flex-column w-100 h-100 justify-content-center align-items-center">
-  <h1 class="Display-1 text-custom mb-4">I'm Making a Game!</h1>
+  <h1 class="Display-1 text-custom mb-4 text-center">I'm Making a Game!</h1>
   <a id="check-out-my-game-button" class="d-flex flex-row justify-content-center align-items-center text-decoration-none" href="about-my-game.html">
     <span class="text-custom h2 mb-0">Check It Out!</span>
   </a>
